Added test case

--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     compile "com.opencsv:opencsv:4.0"
     compile 'com.google.code.gson:gson:2.2.+'
     compile(files("/home/admin1/Desktop/IPL/out/artifacts/csvbuilder_jar/csvbuilder.jar"))
+    testImplementation 'org.mockito:mockito-core:3.+'
 }
